# xalgameengine

./: .gitignore
engine/: CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  cmake_install.cmake
engine/include/XALGameEngine/: Global.hpp  Global.in.hpp  GlobalGraphicsHandler.hpp  GlobalTagsManager.hpp  GraphicsAPIEnum.hpp  Log.hpp  LogicManager.hpp  XALGameEngine.hpp
engine/include/XALGameEngine/GraphicsHandler/: Handler.hpp  Vulkan.hpp
engine/include/XALGameEngine/Loop/: LogicLoop.hpp  Loop.hpp  RenderLoop.hpp
engine/include/XALGameEngine/Object/: Object.hpp  ObjectType.hpp
engine/include/XALGameEngine/PlatformSpecificGraphicsHandler/: GLFW.hpp  GLFWWithVulkan.hpp  Handler.hpp  Vulkan.hpp
engine/include/XALGameEngine/Tag/: Tag.hpp  TagData.hpp  TagsManager.hpp
engine/include/XALGameEngine/Vulkan/: Instance.hpp  Utilities.hpp  Vulkan.hpp
engine/include/XALGameEngine/Window/: GLFW.hpp  GLFWWindow.hpp  Window.hpp
engine/scripts/: build-glfw.ps1  build-glm.ps1
engine/src/: GlobalGraphicsHandler.cpp  GlobalTagsManager.cpp  LogicManager.cpp  XALGameEngine.cpp
engine/src/GraphicsHandler/: Vulkan.cpp
engine/src/GraphicsPlatformSpecificHandlers/: GLFWWithVulkan.cpp
engine/src/Loop/: LogicLoop.cpp  Loop.cpp  RenderLoop.cpp
engine/src/Object/: Object.cpp
engine/src/PlatformSpecificGraphicsHandler/: GLFWWithVulkan.cpp  Vulkan.cpp
engine/src/Tag/: TagData.cpp  TagsManager.cpp
engine/src/Vulkan/: Instance.cpp  Utilities.cpp  Vulkan.cpp
engine/src/Window/: GLFW.cpp  GLFWWindow.cpp  Window.cpp
examples/example1/: CMakeLists.txt  CMakeSettings.json  Settings.hpp  Settings.in.hpp  build.ps1  main.cpp
